# ddns

./: CMakeLists.txt  README.en.md  README.md
include/: alisdk.h  class_client.h
src/: class_client.cpp  ddns.cpp  main.cpp
